Segunda versión con botones y casi balones

--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
   <body>
     <section >
       <h1>Sports!</h1>
-      <button type="button" name="button">Soccer</button>
-      <button type="button" name="button">Basquet</button>
-      <button type="button" name="button">Tenis</button>
+      <button type="button" name="button" id="botonFutbol">Soccer</button>
+      <button type="button" name="button" id="botonBasquet">Basquet</button>
+      <button type="button" name="button" id="botonTenis">Tenis</button>
 
     </section>
 
-    <!-- <section id="canchaFutbol">
+    <section id="canchaFutbol">
+      <article id="balon">
+        <article class="triangulo"></article>
+        <article class="trapecio"></article>
+        <article class="linea"></article>
+      </article>
       <article class="porteria1"></article>
       <article class="porteria1 porteria2"></article>
       <article class="lineaCentral"></article>
       <article class="circuloCentral"></article>
       <article class="semicirculo1"></article>
       <article class="semicirculo1 semicirculo2"></article>
-    </section> -->
+    </section>
 
-    <!-- <section id="canchaBasquet">
+    <section id="canchaBasquet">
       <article class="trapecioFondo"></article>
       <article class="trapecioFondo trapecioFondoDerecha"></article>
       <article class="circuloMedio"></article>
@@ -34,18 +39,17 @@
       <article class="lineaCentro"></article>
       <article class="mediaLunaDerecha"></article>
       <article class="mediaLunaDerecha mediaLunaIzquierda"></article>
-    </section> -->
+    </section>
 
     <section id="canchaTenis">
       <article class="lineaDelCentro"></article>
-      <article class=""></article>
-      <article class=""></article>
-      <article class=""></article>
-      <article class=""></article>
-      <article class=""></article>
-      <article class=""></article>
-      <article class=""></article>
+      <article class="lineaHorizontal"></article>
+      <article class="rectanguloGrande"></article>
+      <article class="rectanguloPequeño"></article>
+
     </section>
+
+    <script src = "main.js"></script>
 
   </body>
 </html>
